Package: aroma.core
===================

Version: 2.6.3 [2012-10-14]
o CLEANUP: Removed several defunct/obsolete methods and made
  deprecated methods defunct/obsolete. 


Version: 2.6.2 [2012-10-11]
o Now aroma.core imports R.methodsS3 and R.oo.
  This solves issues such as trim() being overridden by ditto 
  from the IRanges package, iff loaded.


Version: 2.6.1 [2012-09-14]
o Added exportAromaUnitPscnBinarySet() for a list.
o BUG FIX: exportAromaUnitPscnBinarySet() for AromaUnitTotalCnBinarySet
  would throw an error if the files of the exported data set was
  ordered in a non-lexicographic order.


Version: 2.6.0 [2012-09-05]
o Submitted to CRAN.
o The package passes all redundancy tests.


Version: 2.5.14 [2012-09-04]
o Added downloadUGC() for AromaRepository.


Version: 2.5.13 [2012-09-02]
o BUG FIX: interleave() for Image and RasterImage could generate
  error 'Error in if (abs(vRatio) > abs(hRatio)) { : missing value 
  where TRUE/FALSE needed' if odd/even cell intensity columns (rows)
  contained all NAs.


Version: 2.5.12 [2012-08-31]
o GENERALIZATION: Now downloadCDF() for AromaRepository downloads
  CDFs regardless of *.cdf and *.CDF.


Version: 2.5.11 [2012-08-29]
o ROBUSTNESS: Added argument 'escape' to findAnnotationData(), which
  causes such symbols that exist in argument 'pattern' to be 
  automatically be escaped.


Version: 2.5.10 [2012-08-26]
o DOCUMENTATION: Clarified that when colBinnedSmoothing() is done
  over zero-length bins, the output for those bins will be NA.
o BUG FIX: colBinnedSmoothing(..., xOut=xOut) would return binned
  values in the incorrect order, iff 'xOut' was not ordered.
  Added a systems test for this case.
o BUG FIX: colBinnedSmoothing(..., xOut=xOut) could generate bins
  at the ends that did not contain the outer most 'xOut' values.


Version: 2.5.9 [2012-08-22]
o Improved the AromaRepository class.


Version: 2.5.8 [2012-08-21]
o ROBUSTNESS: Now the package startup message is outputted at the